--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Parkly</title>
+    <link rel="icon" type="image/png" sizes="100x100" href="/favicon.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
